docs/api/qiskit/0.19/qiskit.aqua.components.multiclass_extensions.OneAgainstRest.mdx
---
title: OneAgainstRest (v0.19)
description: API reference for qiskit.aqua.components.multiclass_extensions.OneAgainstRest in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.components.multiclass_extensions.OneAgainstRest
---

# OneAgainstRest

<Class id="qiskit.aqua.components.multiclass_extensions.OneAgainstRest" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/components/multiclass_extensions/one_against_rest.py" signature="OneAgainstRest" modifiers="class">
  The One Against Rest multiclass extension.

  For an $n$-class problem, the **one-against-rest** method constructs $n$ SVM classifiers, with the $i$-th classifier separating class $i$ from all the remaining classes, $\forall i \in \{1, 2, \ldots, n\}$. When the $n$ classifiers are combined to make the final decision, the classifier that generates the highest value from its decision function is selected as the winner and the corresponding class label is returned.

  ## Methods

  <span id="oneagainstrest-predict" />

  ### predict

  <Function id="qiskit.aqua.components.multiclass_extensions.OneAgainstRest.predict" signature="OneAgainstRest.predict(x)">
    Applying multiple estimators for prediction.

    **Parameters**

    **x** (*numpy.ndarray*) – NxD array

    **Returns**

    predicted labels, Nx1 array

    **Return type**

    numpy.ndarray
  </Function>

  <span id="oneagainstrest-set-estimator" />

  ### set\_estimator

  <Function id="qiskit.aqua.components.multiclass_extensions.OneAgainstRest.set_estimator" signature="OneAgainstRest.set_estimator(estimator_cls, params=None)">
    Called internally to set `Estimator` and parameters :type estimator\_cls: `Callable`\[\[`List`], `Estimator`] :param estimator\_cls: An `Estimator` class :type params: `Optional`\[`List`] :param params: Parameters for the estimator

    **Return type**

    `None`
  </Function>

  <span id="oneagainstrest-test" />

  ### test

  <Function id="qiskit.aqua.components.multiclass_extensions.OneAgainstRest.test" signature="OneAgainstRest.test(x, y)">
    Testing multiple estimators each for distinguishing a pair of classes.

    **Parameters**

    *   **x** (*numpy.ndarray*) – input points
    *   **y** (*numpy.ndarray*) – input labels

    **Returns**

    accuracy

    **Return type**

    float
  </Function>

  <span id="oneagainstrest-train" />

  ### train

  <Function id="qiskit.aqua.components.multiclass_extensions.OneAgainstRest.train" signature="OneAgainstRest.train(x, y)">
    Training multiple estimators each for distinguishing a pair of classes.

    **Parameters**

    *   **x** (*numpy.ndarray*) – input points
    *   **y** (*numpy.ndarray*) – input labels

    **Raises**

    **Exception** – given all data points are assigned to the same class, the prediction would be boring
  </Function>
</Class>

